# Physics-based-rendering

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Camera.h  Config.h  Light.h  Mesh.h  Model.h  Shader.h  UI.h  Window.h  ggl.h
lib/: libGL.dylib  libGLU.dylib
res/model/MedievalFirePlace/: MedievalFirePlace.mtl
res/model/teapot/: teapot.mtl
res/shader/: skybox_frag.glsl  skybox_vert.glsl  teapot_shadow_mapping_frag.glsl  teapot_shadow_mapping_vert.glsl
src/: Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp  Shader.cpp  UI.cpp  Window.cpp  main.cpp
